--- a/Journal/Journal/Journal/Resources/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Journal/Resources/Base.lproj/Main.storyboard
@@ -90,9 +90,9 @@
                                     <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="2" translatesAutoresizingMaskIntoConstraints="NO" id="XdR-7S-nrU">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="29"/>
                                         <segments>
-                                            <segment title="" image="Image"/>
-                                            <segment title="" image="Image"/>
-                                            <segment title=""/>
+                                            <segment title="😊"/>
+                                            <segment title="🤪"/>
+                                            <segment title="🧐"/>
                                         </segments>
                                     </segmentedControl>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a title:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="inV-rg-lJ7">
@@ -158,10 +158,7 @@
             <point key="canvasLocation" x="-149.27536231884059" y="57.589285714285708"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="Image" width="144" height="144"/>
-    </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="ar3-23-eVO"/>
+        <segue reference="rRk-Rh-whu"/>
     </inferredMetricsTieBreakers>
 </document>
