NSFetchedResultsController implemented, added header section titles

--- a/Journal-CoreData/Journal-CoreData/Storyboards/Base.lproj/Main.storyboard
+++ b/Journal-CoreData/Journal-CoreData/Storyboards/Base.lproj/Main.storyboard
@@ -187,7 +187,7 @@
                                                                             <constraint firstAttribute="height" constant="458" id="NNH-vD-02F"/>
                                                                         </constraints>
                                                                         <inset key="scrollIndicatorInsets" minX="16" minY="10" maxX="16" maxY="10"/>
-                                                                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
+                                                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
                                                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                                                     </textView>
                                                                 </subviews>
