Fixed edge insets

--- a/Journal-CoreData/Journal-CoreData/Storyboards/Base.lproj/Main.storyboard
+++ b/Journal-CoreData/Journal-CoreData/Storyboards/Base.lproj/Main.storyboard
@@ -99,10 +99,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fRJ-7c-Bfl">
-                                <rect key="frame" x="0.0" y="140" width="414" height="756"/>
+                                <rect key="frame" x="0.0" y="140" width="414" height="776"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LL8-Xp-xFr">
-                                        <rect key="frame" x="191" y="703" width="32.5" height="23"/>
+                                        <rect key="frame" x="191" y="703" width="32.5" height="43"/>
                                         <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="13"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -223,7 +223,7 @@
                         <constraints>
                             <constraint firstItem="fRJ-7c-Bfl" firstAttribute="trailing" secondItem="Hrw-TB-riH" secondAttribute="trailing" id="AAV-dX-44l"/>
                             <constraint firstItem="fRJ-7c-Bfl" firstAttribute="top" secondItem="Hrw-TB-riH" secondAttribute="top" id="GpX-4G-6le"/>
-                            <constraint firstAttribute="bottom" secondItem="fRJ-7c-Bfl" secondAttribute="bottom" id="Taq-1Y-pxz"/>
+                            <constraint firstAttribute="bottom" secondItem="fRJ-7c-Bfl" secondAttribute="bottom" constant="-20" id="Taq-1Y-pxz"/>
                             <constraint firstItem="fRJ-7c-Bfl" firstAttribute="leading" secondItem="Hrw-TB-riH" secondAttribute="leading" id="bvf-sV-yCu"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Hrw-TB-riH"/>
@@ -276,10 +276,10 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="udn-sn-kH4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-106" y="131"/>
+            <point key="canvasLocation" x="-97" y="131"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="wcW-K3-wWR"/>
+        <segue reference="i22-ch-M9I"/>
     </inferredMetricsTieBreakers>
 </document>
