--- a/Journal/Journal/Journal/Resources/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Journal/Resources/Base.lproj/Main.storyboard
@@ -132,7 +132,8 @@
                     </navigationItem>
                     <connections>
                         <outlet property="enteriesTextView" destination="Lg5-Tb-xgS" id="rmV-jU-bLK"/>
-                        <outlet property="enteryTextField" destination="inV-rg-lJ7" id="egb-uE-xMU"/>
+                        <outlet property="entryTextField" destination="inV-rg-lJ7" id="wfg-vl-Rnb"/>
+                        <outlet property="moodSegmentController" destination="XdR-7S-nrU" id="ejW-kk-S8K"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6M0-66-scD" userLabel="First Responder" sceneMemberID="firstResponder"/>
