--- a/MyJournal/MyJournal/Storyboards/Base.lproj/Main.storyboard
+++ b/MyJournal/MyJournal/Storyboards/Base.lproj/Main.storyboard
@@ -62,7 +62,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="feelingSegControl" destination="l5V-Nc-AJI" id="SF4-Po-8DE"/>
+                        <outlet property="moodSegControl" destination="l5V-Nc-AJI" id="eQ4-dy-MHd"/>
                         <outlet property="storyTextView" destination="Z5d-1g-J1s" id="wI1-aq-bEd"/>
                         <outlet property="titleTextField" destination="wHP-LD-6MN" id="Nvx-Mc-nYI"/>
                     </connections>
